--- a/pop_up_wall/CMakeLists.txt
+++ b/pop_up_wall/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(Boost REQUIRED COMPONENTS system)
 find_package(OpenCV REQUIRED)
 find_package(PCL REQUIRED)
-find_package(Eigen REQUIRED)
+find_package(Eigen3 REQUIRED)
 find_package (PythonLibs 2.7 REQUIRED) 
 
 ###################################
